# kmeansII

./: .gitignore  CMakeLists.txt  CSV.h  Kmeans.cpp  Kmeans.h  LICENSE.md  README.md  cluster.h  dataReader.h  main.cpp
generatedFiles/: Dataset.py  generateDataset.py  home.py  testing.py
inputFiles/: DimRed1000.txt  DimRed10000.txt  DimRedFullData.txt  DimRedFullDataComplete.txt  drivPoints.CSV  test.CSV  testingPoints.CSV
lib/: CSV.h  Kmeans.cpp  Kmeans.h  KmeansII.cpp  KmeansII.h  Kmeanspp.cpp  Kmeanspp.h  a.out  data.h  dataReader.h  functions.h  main.cc  main.cpp  trying.cc  trying.cpp  trying.hh
lib/Algorithm/: IterationRunnerBase.hh  IterationRunners.cc  IterationRunners.h  IterationRunners.hh  Kmeans.cc  Kmeans.cpp  Kmeans.h  Kmeans.hh  Kmeans2Instance.hh  KmeansBase.cc  KmeansBase.h  KmeansBase.hh  KmeansHelpers.h  KmeansHelpers.hh  KmeansII.cpp  KmeansII.h  KmeansII.hh  KmeansIIInitializer.hh  KmeansInitializer.hh  KmeansInstance.hh  Kmeanspp.cpp  Kmeanspp.h  LloydIterationRunner.cc  LloydIterationRunner.hh  SeedPickerBase.cc  SeedPickerBase.hh  SeedPickers.cc  SeedPickers.h  SeedPickers.hh  data.hh  iteration_runner_base.h  iteration_runners.h  kmeans.h  kmeans_base.cc  kmeans_data.cc  kmeans_data.h  kmeans_helpers.cc  kmeans_helpers.h  kmeans_instance.h  lloyd_iteration_runner.cc  (+4 more)
lib/Experiments/: ExperimentAnalyzer.hh  Hungarian.hh  experimentResult.hh  experimentRunner.hh  experiment_analyzer.h  experiment_result.h  experiments.h  experiments.hh  experimentsReader.hh  experiments_reader.h
lib/Experiments/Experiment Results/: kmeans++-DimRedFullData-test0  kmeans++-DimRedFullData-test0.txt  kmeans++-DimRedFullData-test1.txt  kmeans++-DimRedFullData-test3.txt  kmeans++-DimRedFullData-test4.txt  kmeans++-DimRedFullData-test5.txt  kmeans++-DimRedFullData-test6.txt  kmeans++-DimRedFullData-test7.txt  kmeans++-DimRedFullData-test8.txt  (+22 more)
lib/FindK/: FindK.cc  data.h  hungarian.cc  hungarian.h
lib/algorithm/: csv.cc  csv.h  globals.h  iteration_runner_base.h  iteration_runners.h  kmeans.h  kmeans_base.cc  kmeans_base.h  kmeans_data.cc  kmeans_data.h  kmeans_helpers.cc  kmeans_helpers.h  kmeans_ii_instance.h  kmeans_input_arguments.h  kmeans_instance.h  kmeans_io.cc  kmeans_io.h  kmeans_utils.cc  kmeans_utils.h  lloyd_iteration_runner.cc  lloyd_iteration_runner.h  seed_picker_base.h  seed_pickers.cc  seed_pickers.h
lib/bigInt/: big_int.h
lib/experiments/: centre_intersections.cc  centre_intersections.h  convex_hull.cc  convex_hull.h  disjoint_set_union.cc  disjoint_set_union.h  experiment_analyzer.h  experiment_analyzer2.cc  experiment_analyzer2.h  experiment_helpers.cc  experiment_helpers.h  experiment_result.h  experiment_runner.cc  experiment_runner.cc.deprecated  experiment_runner.h  experiment_runner.h.depricated  experiments.h  experiments_bipartite_perfect_matching.cc  experiments_bipartite_perfect_matching.h  experiments_data.h  experiments_input_arguments.h  experiments_io.cc  experiments_io.h  experiments_reader.cc  experiments_reader.h  hungarian.cc  hungarian.h  notes.txt  perfect_matching.cc  perfect_matching.h  perfect_matching_uncompleted_deprecated.cc  perfect_matching_uncompleted_deprecated.h
lib/handlers/: CSV.cc  CSV.cpp  CSV.h  csv.h  data.cpp  data.h  data.hh  dataReader.h  dataReader.hh  data_reader.h  inputArguments.hh  input_arguments.h
lib/pkgs/: macro_traits.hh.gch  numcvt.hh.gch  strcvt.hh.gch  typecvt.hh.gch
lib/runners/: experiment.cc  kmeans.cc  trying.cc
lib/scripts/: convex_hull.py  distance.py  experiment_analyzer.py  experiment_centres.py  experiment_cluster.py  experiment_convex_hull.py  experiment_distances.py  experiment_instance.py  experiment_intersection_over_union.py  experiment_io.py  experiment_perfect_matching.py  experiment_plotters.py  experiment_readers.py  experiment_runtimes.py  experiment_serializer.py  experiment_utils.py  heatmap.py  hungarian.py  main.py  output.txt  plotExperimentCentres.py  readExperimentRuntimes.py  runners.extra  strongly_connected_componenents.py  test.py  test2.py  testInput.txt  trying.py
lib/sidehussle/: graph.cc  graph.h  hungarian.cc  hungarian.h  main.cc
tests/: data.cpp  test-CSV.cc  test-CSV.cpp  test-LloydIterationRunner.cc  test-data.cpp  test-kmeansHelpers.cc  test_convex_hull.cc  test_csv.cc  test_data.cc  test_data_reader.cc  test_experiment_helpers.cc  test_kmeans.cc  test_kmeans_data.cc  test_kmeans_helpers.cc  test_lloyd_iteration_runner.cc  test_perfect_matching.cc  test_random.cc  tests.cc  tests.cpp
tests/input-files/: test1.csv  test3.csv
thesis/: abstract.docx  increaseTexMemory.txt  ~$stract.docx
thesis/latex/: Makefile  dalthesis.cls  data.csv  data2.csv  simple.aux  simple.bbl  simple.bib  simple.blg  simple.fdb_latexmk  simple.fls  simple.ps  simple.tex  simple.toc  table.csv  yaser_thesis.bib  yaser_thesis.fdb_latexmk  yaser_thesis.tex
thesis/latex - default/: index.html
(+1318 files in other folders)
